@@ -43,6 +43,7 @@
 #include <grub/time.h>
 #include <grub/i18n.h>
 
+#define ENABLE_RELOCATABLE 0
 #include "progname.h"
 
 /* Include malloc.h, only if memalign is available. It is known that
@@ -142,13 +143,13 @@ char *
 xstrdup (const char *str)
 {
   size_t len;
-  char *dup;
+  char *newstr;
 
   len = strlen (str);
-  dup = (char *) xmalloc (len + 1);
-  memcpy (dup, str, len + 1);
+  newstr = (char *) xmalloc (len + 1);
+  memcpy (newstr, str, len + 1);
 
-  return dup;
+  return newstr;
 }
 
 char *
